--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-select": "^5.10.1"
+    "react-markdown": "^10.1.0",
+    "react-select": "^5.10.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
